--- a/index.html
+++ b/index.html
@@ -4,10 +4,72 @@
   <meta charset="utf-8">
   <title>kleroterion - decentralized court</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="scrolling-nav.js"></script>
 </head>
 <body>
-  <div class='container'>
-    <h1>Kleroterion</h1>
+  <div class="container">
+    <div>
+      <nav class="menu">
+        <div id="menu-center">
+          <ul class="flex-container space-between ">
+            <li class="flex-item title">Kleroterion</li>
+            <li class="flex-item">
+              <ul>
+                <li class="item-menu">
+                  <a href="#vision" class="menu-link">vision</a>
+                </li>
+                <li class="item-menu">
+                  <a href="#useCase" class="menu-link">use cases</a>
+                </li>
+                <li class="item-menu">
+                  <a href="#about" class="menu-link">about</a>
+                </li>
+                <li class="item-menu last-child-menu ">
+                  <a href="#contact" class="menu-link">contact</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div id="home">
+      <div class="subtitle">
+          <img src="http://www.idea4sites.com/_imgs/animated_map.gif" />
+          <div class="description">
+            <h1>DECENTRALIZED COURT</h1>
+            <h2>opt-in legal crypto institution</h2>
+          </div>
+        </div>
+    </div>
+    <div id="vision">
+      <hr />
+      <h1>VISION</h1>
+    </div>
+    <div id="useCase">
+      <hr />
+      <h1>Use case</h1>
+    </div>
+    <div id="about">
+      <hr />
+      <h1>About</h1>
+    </div>
+    <div id="contact">
+      <hr />
+      <h1>Contact</h1>
+    </div>
+
+    <div class="footer">
+      <h3>KLEROTERION</h3>
+      <p>Decentralized court project</p>
+    </div>
   </div>
+  </div>
+
+
+
+
+
 </body>
 </html>
