--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
             <li class="flex-item">
               <ul>
                 <li class="item-menu">
-                  <a href="#vision" class="menu-link">vision</a>
+                  <a href="#vision" class="menu-link">our vision</a>
                 </li>
                 <li class="item-menu">
                   <a href="#useCase" class="menu-link">use cases</a>
+                </li>
+                <li class="item-menu">
+                  <a href="#about" class="menu-link">how works</a>
+                </li>
+                <li class="item-menu">
+                  <a href="#about" class="menu-link">white paper</a>
                 </li>
                 <li class="item-menu">
                   <a href="#about" class="menu-link">about</a>
@@ -36,7 +42,10 @@
     </div>
     <div id="home">
       <div class="subtitle">
-          <img src="http://www.idea4sites.com/_imgs/animated_map.gif" />
+          <center>
+            <img src="img/kleroterion.gif" /> 
+          </center>
+
           <div class="description">
             <h1>DECENTRALIZED COURT</h1>
             <h2>opt-in legal crypto institution</h2>
@@ -45,7 +54,7 @@
     </div>
     <div id="vision">
       <hr />
-      <h1>VISION</h1>
+      <h1>OUR VISION</h1>
     </div>
     <div id="useCase">
       <hr />
