fix font for the canevas

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               ctx.strokeRect(450, 270, 120, 70);
 
 
-              ctx.font="24px Montserrat";
+              ctx.font="24px Montserrat, sans-serif";
               ctx.textAlign="center";
               ctx.textBaseline = "middle";
               ctx.fillStyle = "#fff";
