update img header

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="home">
       <div class="subtitle">
           <center>
-            <img src="img/animated_map_virgin.gif" />
+            <img src="img/kleroterion-world.gif" />
           </center>
 
           <div class="description">
@@ -100,6 +100,8 @@
       <div class="parent">
         <div class="col right">
           <p>
+            There is several subcourt for each specialization lorem ipsum.
+            <br /><br />
             Parties would select the court to arbitrate their contracts in case of disputes.
             <br />
             Dispute will be first handled by arbitrators, but parties will have the possibility to appeal to a jury system. Both arbitrators and jury members will have game theoretical incentive to arbitrate disputes in an honest manner.
