add section white paper and contact

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                   <a href="#howWorks" class="menu-link">how works</a>
                 </li>
                 <li class="item-menu">
-                  <a href="#about" class="menu-link">white paper</a>
-                </li>
-                <li class="item-menu">
-                  <a href="#about" class="menu-link">about</a>
+                  <a href="#whitePaper" class="menu-link">white paper</a>
                 </li>
                 <li class="item-menu last-child-menu ">
                   <a href="#contact" class="menu-link">contact</a>
@@ -61,7 +58,6 @@
         <br  />
         <br  />
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pulvinar sollicitudin nulla eget tempus. Curabitur vitae nisi nec risus fringilla pharetra vitae vitae nisi. Sed maximus tellus eget ipsum dictum pulvinar. In lacus lorem, ornare hendrerit purus dignissim, finibus interdum sapien. Maecenas fringilla lectus ligula, ut facilisis magna blandit quis. Fusce mollis erat ac orci aliquet, ac viverra urna ultricies. Proin suscipit, turpis sagittis vestibulum consectetur, magna mi luctus est, quis tincidunt elit velit et nisl. In sed molestie libero. Maecenas non ligula dui. Mauris tristique sagittis sagittis. Pellentesque ultricies, mi in sollicitudin vulputate, justo sapien aliquam magna, a ultricies risus nunc ac arcu. Vivamus justo ex, imperdiet at gravida aliquam, consequat ac eros. Duis vitae nibh nec diam condimentum blandit et at est. Suspendisse nisi risus, ullamcorper eu vulputate sed, imperdiet ut magna. Aenean efficitur iaculis vulputate.
-
       </p>
     </div>
     <div id="useCase">
@@ -96,7 +92,7 @@
     </div>
     <div id="howWorks">
       <hr />
-      <h1>How works</h1>
+      <h1>HOW WORKS</h1>
       <div class="parent">
         <div class="col right">
           <p>
@@ -156,13 +152,25 @@
           </script>
         </div>
       </div>
-
+    </div>
+    <div id="whitePaper">
+      <hr />
+      <h1>WHITE PAPER</h1>
+      <div class="download">
+        <a
+          href="https://github.com/ethercourt/workspace/raw/master/decentralized-court/whitePaper/DAC.pdf"
+          class="white-paper">
+          Download White paper v-O.1.1
+        </a>
+      </div>
     </div>
     <div id="contact">
       <hr />
-      <h1>Contact</h1>
+      <h1>CONTACT</h1>
+      <div class="contact">
+        <a href='mailto:clemage@live.fr' class='mail'>✉</a>
+      </div>
     </div>
-
     <div class="footer">
       <h3>KLEROTERION</h3>
       <p>Decentralized court project</p>
