add font size responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>kleroterion - decentralized court</title>
+  <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scrolling-nav.js"></script>
@@ -62,7 +63,6 @@
       <div>
         <canvas id="justice" width=400 height=350></canvas>
       </div>
-
     </div>
     <div id="useCase">
       <hr />
