change the wording our vision

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <h1 class="h-title">OUR VISION</h1>
         <div>
           <p>
-            <strong>KLEROTERION</strong> aims at providing a decentralized cour
-            running on the blockchain ethereum to arbitrate disputes.
+            <strong>Kleroterion</strong> aims to build a <strong>decentralized court</strong> system for solving the disputes of the blockchain age.
           </p>
         </div>
       </div>
