change the wording

--- a/index.html
+++ b/index.html
@@ -146,11 +146,12 @@
             ctx.textAlign="center";
             ctx.textBaseline = "middle";
             ctx.fillStyle = "#448fda";
-            ctx.fillText("Escrow", 85, 35);
-            ctx.fillText("Funding", 285, 35);
-            ctx.fillText("Insurance", 485, 35);
+            ctx.fillText("Company a", 85, 35);
+            ctx.fillText("Academia b", 285, 35);
+            ctx.fillText("Private city...", 485, 35);
             ctx.fillText("KLEROTERION", 300, 125);
-            ctx.fillText("Finance", 135, 215);//render your page
+            ctx.fillText("B2B", 135, 215);
+            ctx.fillText("B2C", 435, 215);
           }
         </script>
       </div>
