--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <h1 class="h-title">OUR VISION</h1>
         <div>
           <p>
+            <strong>Kleroterion</strong> is based on how the Greek structured their justice system.
+          </p>
+          <br />
+          <p>
             <strong>Kleroterion</strong> aims to build a <strong>decentralized court</strong> system for solving the disputes of the blockchain age.
           </p>
         </div>
