add title and responsive for phone screen

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         </div>
       </nav>
     </div>
+    <div class="appBar-phone">
+      <h1 class="title">Kleroterion</h1>
+    </div>
     <div id="home"></div>
     <div class="block block-first" id="vision">
       <div class="block-vision-text">
