change the wording

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </p>
           <br />
           <p>
-            <strong>Kleroterion</strong> aims to build a <strong>decentralized court</strong> system for solving the disputes of the blockchain age.
+            We aim to build a decentralized court system that can be used for many civic and arbitration tools.
           </p>
         </div>
       </div>
@@ -110,11 +110,34 @@
         </div>
         <div>
           <p>
-            There is several subcourt for each specialization lorem ipsum.
-            <br /><br />
-            Parties would select the court to arbitrate their contracts in case of disputes.
-            <br />
-            Dispute will be first handled by arbitrators, but parties will have the possibility to appeal to a jury system. Both arbitrators and jury members will have game theoretical incentive to arbitrate disputes in an honest manner.
+            Giselle, an entrepreneur based on France, contracts Miguel, a programmer from Guatemala to build a new website for her company.
+          </p>
+          <p>
+            They write a smart contract where they agree on a price, terms and conditions. They agree to use Kleroterion as the default dispute resolution mechanism.
+          </p>
+          <p>
+            A dispute arises over the scope of the work.
+          </p>
+          <p>
+            Evidence about the contract and product is sent to Kleroterion for arbitration.
+          </p>
+          <p>
+            Kleroterion selects a jury to decide over the dispute.
+          </p>
+          <p>
+            Jurors evaluate the evidence and vote which party is right.
+          </p>
+          <p>
+            The verdict is enforced by a smart contract.
+          </p>
+          <p>
+            The Kleroterion was a randomization device for selecting public officials and juries.
+          </p>
+          <p>
+            Except for special cases (e.g., murder), Athenians did not have professional judges. Dispute resolution was entirely p2p.
+          </p>
+          <p>
+            The day of the trial, citizens wishing to participate as jurors went to the courthouse and inserted their pinakion into a slot of the Kleroterion.
           </p>
         </div>
       </div>
