add wording for the subcourts

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
           <p>
             The day of the trial, citizens wishing to participate as jurors went to the courthouse and inserted their pinakion into a slot of the Kleroterion.
           </p>
+
+          <p>
+            More, there are some subcourt specializes in a particular kind of dispute.
+          </p>
         </div>
       </div>
 
