--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <h1>Kleroterion</h1>
+    <h2 class="title">Based on blockchain Ethereum</h1>
+    <h1 class="title">A JUSTICE SYSTEM</h1>
+    <h1 class="subtitle">FOR THE INTERNET</h1>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
