--- a/index.html
+++ b/index.html
@@ -7,37 +7,69 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Kleroterion logo</a>
-        </div>
+    <section class="introduction">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Kleroterion logo</a>
+          </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">System</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">App</a></li>
-            <li><a href="#">Crowdfunding</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Advisor</a></li>
-            <li><a href="#">Faq</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <h2 class="title">Based on blockchain Ethereum</h1>
-    <h1 class="title">A JUSTICE SYSTEM</h1>
-    <h1 class="subtitle">FOR THE INTERNET</h1>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">System</a></li>
+              <li><a href="#">How it works</a></li>
+              <li><a href="#">App</a></li>
+              <li><a href="#">Crowdfunding</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Advisor</a></li>
+              <li><a href="#">Faq</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      <h2 class="title">Based on blockchain Ethereum</h1>
+      <h1 class="title">A JUSTICE SYSTEM</h1>
+      <h1 class="subtitle">FOR THE INTERNET</h1>
+
+      <button type="button" class="btn btn-danger">How it works</button>
+      <button type="button" class="btn btn-default">Download the white paper</button>
+    </section>
+
+    <section class="justice-system">
+      <h2>JUSTICE SYSTEM</h2>
+    </section>
+
+    <section class="how-it-works">
+      <h2>HOW IT WORKS?</h2>
+    </section>
+
+    <section class="applications">
+      <h2>APPLICATIONS</h2>
+    </section>
+
+    <section class="features">
+      <h2>FEATURES</h2>
+    </section>
+
+    <section class="team">
+      <h2>TEAM</h2>
+    </section>
+
+    <section class="faq">
+      <h2>FRENQUENTLY ASKED QUESTION</h2>
+    </section>
+
+    <section class="contact"></section>
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
